# ai-code-reviewer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: architect.md  changelog.md  code_quality.md  documentation.md  git_flow.md  performance.md  security.md  solid.md  testing.md
.github/workflows/: ci.yml
data/: reviews.db
src/agents/: __init__.py  base_agent.py  master_agent.py
src/agents/specialists/: __init__.py  code_quality_agent.py  devops_agent.py  documentation_agent.py  performance_agent.py  security_agent.py  testing_agent.py
src/api/: main.py
src/api/routes/: __init__.py  agent.py  schemas.py
src/infrastructure/queue/: __init__.py  event_store.py  (+1 more)
src/llm/: __init__.py  factory.py  fallback_chain.py
src/models/: __init__.py  agent_state.py  file_context.py  mcp_schemas.py  review_comment.py
tests/: test_agent_routes.py  test_agent_state.py  test_all_schemas.py  test_circuit_breaker.py  test_comment_publisher.py  test_context_builder.py  test_db.py  test_deterministic_validator.py  test_devops_agent.py  test_event_store.py  test_fallback_chain.py  test_git_client.py  test_git_service.py  test_github_actions.py  test_litellm_adapter.py  test_llm.py  test_master_agent.py  test_mcp_schemas.py  test_pr_scorer.py  test_prompt_cache.py  test_queue.py  test_rate_limiter.py  test_retry_policy.py  test_review_comment.py  test_semantic_chunker.py  test_usage_analyzer.py  test_webhook_validator.py
tests/integration/: test_api.py  test_database.py  test_llm.py
(+25 files in other folders)
