[project]
name = "ai-code-reviewer"
version = "0.1.0"
description = "AI Agent that reviews Pull Requests on GitHub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.2.56",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
src = ["src"]
python_version = "3.11"
